Noteworthy changes in version 1.0.1
------------------------------------------------


Noteworthy changes in version 1.0.0 (2006-10-31)
------------------------------------------------

 * Finished the manual.


Noteworthy changes in version 0.9.3 (2006-10-10)
------------------------------------------------

 * Portability fixes.

 * Pth is not anymore linked by means of weak symbol tricks.  It is
   now required to link to the pth version of libassuan.  New autoconf
   macros are provided to to check for this.  The pth version is only
   build if Pth is available.

 * configure does now check that descripotor passing is available.  A
   way to check at runtime for this is also provided


Noteworthy changes in version 0.9.2 (2006-10-04)
------------------------------------------------

 * A fix to make CANCEL work again in Pinentries.


Noteworthy changes in version 0.9.1 (2006-10-04)
------------------------------------------------

 * Minor bug fixes

 * Portability fixes.


Noteworthy changes in version 0.9.0 (2006-09-14)
------------------------------------------------

 * Internal cleanups to make inclusion of the code into libraries
   easier.

 * Made clear that the software is under the LGPL.

 * New function assuan_set_assuan_err_source.  All gpg-error enabled
   software should call this right at startup to switch libassuan into
   the gpg-error style mode.  All error codes are then returned as
   gpg-error style codes (GPG_ERR_ASS_* as well as others).
   If the new macro _ASSUAN_ONLY_GPG_ERRORS is defned all old
   definitions are excluded from assuan.h.

 * Logging of hex strings is now limited to 16 bytes.  To enable
   printing of the full data, a new environment variable
   ASSUAN_FULL_LOGGING may be set to any value.

 * Removed the assuan_domain_* functions. 

 * New functions assuan_pipe_connect_ext and assuan_socket_connect_ext
   to allow connections on a socketpair and to pass descriptors.

 * New function assuan_get_peercred.

